# Gardbase

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  Dockerfile.Api  Dockerfile.enclave  LICENSE  MODULE.bazel  README.md  eslint.config.js  go.work  go.work.sum  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  terraform.tfstate  tsconfig.base.json
apps/api/: Dockerfile  README.md  go.mod  go.sum  project.json
apps/api/cmd/server/: main.go
apps/api/internal/handlers/: enclaveProxy.go  encryption.go  healthCheck.go  objects.go  tenants.go
apps/api/internal/handlers/encryption/: handler.go  responses.go
apps/api/internal/handlers/healthCheck/: handler.go
apps/api/internal/handlers/objects/: handler.go  responses.go
apps/api/internal/handlers/tenants/: handler.go  requests.go
apps/api/internal/middleware/: cors.go  middleware.go  permission.go  ratelimit.go  tenant.go  zapLogger.go
apps/api/internal/models/: index.go  object.go
apps/api/internal/services/: enclaveVSock.go  keyManagementService.go  kms.go
apps/api/internal/storage/: dynamo.go  errors.go  s3.go
apps/enclave-service/: go.mod  go.sum  project.json
apps/enclave-service/cmd/enclave/: main.go
apps/enclave-service/internal/handlers/: attestation.go  decrypt.go  generateTableHash.go  get_attestation.go  health.go  prepare_kek.go  session_generate_dek.go  session_generate_table_hash.go  session_init.go  session_prepare_dek.go  session_prepare_iek.go  session_unwrap.go
apps/enclave-service/internal/session/: cleanup.go  store.go
apps/enclave-service/internal/utils/: attestation.go  connection.go  deriveSessionKey.go  hash.go  openssl.go  zero.go
apps/lambdas/upload-processor/: go.mod  go.sum  main.go  project.json
apps/lambdas/upload-processor/internal/: processor.go
apps/landing/: .eslintrc.cjs  .prettierrc  BUILD.bazel  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  project.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/landing/src/: index.css  main.tsx
apps/landing/src/components/: App.tsx  CTASection.tsx  FeaturesSection.tsx  Footer.tsx  Header.tsx  HeroSection.tsx  HowItWorksSection.tsx  OpenSourceSection.tsx  PricingSection.tsx  ProblemStatementSection.tsx
apps/landing/src/lib/: ThemeProvider.tsx  site.ts  themeContext.ts
apps/landing/src/pages/: MainPage.tsx
infrastructure/: dynamodb.tf  ec2.tf  lambda.tf  main.tf  outputs.tf  s3.tf  variables.tf
infrastructure/bootstrap/: main.tf  outputs.tf  variables.tf
infrastructure/environments/: prod.tfvars
infrastructure/main/: .terraform.lock.hcl  cloudwatch.tf  dynamodb.tf  ec2.tf  kms.tf  lambda.tf  main.tf  outputs.tf  s3.tf  user_data.sh  variables.tf
infrastructure/main/environments/: dev.tfvars  prod.tfvars
pkg/api/: go.mod  go.sum
pkg/api/encryption/: requests.go  responses.go
pkg/api/objects/: requests.go  responses.go
pkg/api/tenants/: requests.go  responses.go
pkg/crypto/: attestationVerification.go  deterministic.go  go.mod  go.sum  kms.go  kms_test.go  ope.go  probabilistic.go  utils.go
pkg/enclaveproto/: base.go  create_tenant.go  decrypt.go  generateTableHash.go  get_attestation.go  go.mod  health.go  session_generate_dek.go  session_generate_table_hash.go  session_init.go  session_prepare_iek.go  session_unwrap.go
pkg/models/: apiKey.go  go.mod  index.go  object.go  table.go  tenant.go
