module(
    name = "gardbase",
    version = "0.0.1",
)

# Bazel dependencies
bazel_dep(name = "aspect_rules_js", version = "2.3.8")
bazel_dep(name = "aspect_rules_ts", version = "3.6.3")
bazel_dep(name = "aspect_bazel_lib", version = "2.10.0")
bazel_dep(name = "rules_nodejs", version = "6.3.0")

# Node.js toolchain
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "20.11.0")

# npm dependencies
npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

# TypeScript configuration
ts = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ts")
ts.deps(
    ts_version_from = "//:package.json",
)
use_repo(ts, "npm_typescript")